--- a/angular.json
+++ b/angular.json
@@ -1,9 +1,9 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1, 
+  "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "ngx-flamegraph": {
+    "ngx-flamegraph-sample": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/ngx-flamegraph",
+            "outputPath": "dist/ngx-flamegraph-sample",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -62,18 +62,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "ngx-flamegraph:build"
+            "browserTarget": "ngx-flamegraph-sample:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "ngx-flamegraph:build:production"
+              "browserTarget": "ngx-flamegraph-sample:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "ngx-flamegraph:build"
+            "browserTarget": "ngx-flamegraph-sample:build"
           }
         },
         "test": {
@@ -110,15 +110,59 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "ngx-flamegraph:serve"
+            "devServerTarget": "ngx-flamegraph-sample:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "ngx-flamegraph:serve:production"
+              "devServerTarget": "ngx-flamegraph-sample:serve:production"
             }
           }
         }
       }
-    }},
-  "defaultProject": "ngx-flamegraph"
+    },
+    "ngx-flamegraph": {
+      "projectType": "library",
+      "root": "projects/ngx-flamegraph",
+      "sourceRoot": "projects/ngx-flamegraph/src",
+      "prefix": "lib",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-ng-packagr:build",
+          "options": {
+            "tsConfig": "projects/ngx-flamegraph/tsconfig.lib.json",
+            "project": "projects/ngx-flamegraph/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "projects/ngx-flamegraph/tsconfig.lib.prod.json"
+            }
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/ngx-flamegraph/src/test.ts",
+            "tsConfig": "projects/ngx-flamegraph/tsconfig.spec.json",
+            "karmaConfig": "projects/ngx-flamegraph/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/ngx-flamegraph/tsconfig.lib.json",
+              "projects/ngx-flamegraph/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
+    }
+  },
+  "defaultProject": "ngx-flamegraph-sample",
+  "cli": {
+    "analytics": "aea5311a-b5dd-40cc-a2d1-2e2dfbe5e2cc"
+  }
 }
