--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "dev:ssr": "ng run ngx-flamegraph-sample:serve-ssr",
+    "serve:ssr": "node dist/ngx-flamegraph-sample/server/main.js",
+    "build:ssr": "ng build --prod && ng run ngx-flamegraph-sample:server:production",
+    "prerender": "ng run ngx-flamegraph-sample:prerender"
   },
   "private": true,
   "dependencies": {
@@ -19,11 +23,14 @@
     "@angular/forms": "~9.0.0",
     "@angular/platform-browser": "~9.0.0",
     "@angular/platform-browser-dynamic": "~9.0.0",
+    "@angular/platform-server": "~9.0.0",
     "@angular/router": "~9.0.0",
+    "@nguniversal/express-engine": "^9.0.0",
+    "express": "^4.15.2",
+    "firebase": ">= 5.5.7 <8",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
-    "zone.js": "~0.10.2",
-    "firebase": ">= 5.5.7 <8"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.900.0",
@@ -31,6 +38,8 @@
     "@angular/cli": "~9.0.0",
     "@angular/compiler-cli": "~9.0.0",
     "@angular/language-service": "~9.0.0",
+    "@nguniversal/builders": "^9.0.0",
+    "@types/express": "^4.17.0",
     "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
