--- a/projects/ngx-flamegraph/package.json
+++ b/projects/ngx-flamegraph/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ngx-flamegraph",
   "version": "0.0.6",
+  "license": "MIT",
   "peerDependencies": {
     "@angular/common": "^9.0.0",
     "@angular/core": "^9.0.0",
