Update to Angular v10

--- a/projects/ngx-flamegraph/package.json
+++ b/projects/ngx-flamegraph/package.json
@@ -2,9 +2,11 @@
   "name": "ngx-flamegraph",
   "version": "0.0.8",
   "license": "MIT",
+  "dependencies": {
+    "tslib": "^2.0.0"
+  },
   "peerDependencies": {
     "@angular/common": "^9.0.0",
-    "@angular/core": "^9.0.0",
-    "tslib": "^1.10.0"
+    "@angular/core": "^9.0.0"
   }
 }
