--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@angular/router": "~11.0.2",
     "@nguniversal/express-engine": "^11.0.0",
     "express": "^4.15.2",
-    "firebase": ">= 5.5.7 <8",
+    "firebase": "8.1.1",
     "rxjs": "~6.5.4",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
@@ -56,7 +56,7 @@
     "tslint": "~6.1.0",
     "typescript": "~4.0.5",
     "@angular-devkit/architect": "<0.900 || ^0.900.0-0 || ^9.0.0-0",
-    "firebase-tools": "^7.12.0",
+    "firebase-tools": "^8.16.2",
     "fuzzy": "^0.1.3",
     "inquirer": "^6.2.2",
     "inquirer-autocomplete-prompt": "^1.0.1"
