--- a/package.json
+++ b/package.json
@@ -10,35 +10,35 @@
     "e2e": "ng e2e",
     "dev:ssr": "ng run ngx-flamegraph-sample:serve-ssr",
     "serve:ssr": "node dist/ngx-flamegraph-sample/server/main.js",
-    "build:ssr": "ng build --prod && ng run ngx-flamegraph-sample:server:production",
+    "build:ssr": "ng build --configuration production && ng run ngx-flamegraph-sample:server:production",
     "prerender": "ng run ngx-flamegraph-sample:prerender"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.0.2",
-    "@angular/common": "~11.0.2",
-    "@angular/compiler": "~11.0.2",
-    "@angular/core": "~11.0.2",
+    "@angular/animations": "~12.2.15",
+    "@angular/common": "~12.2.15",
+    "@angular/compiler": "~12.2.15",
+    "@angular/core": "~12.2.15",
     "@angular/fire": "^6.1.1",
-    "@angular/forms": "~11.0.2",
-    "@angular/platform-browser": "~11.0.2",
-    "@angular/platform-browser-dynamic": "~11.0.2",
-    "@angular/platform-server": "~11.0.2",
-    "@angular/router": "~11.0.2",
-    "@nguniversal/express-engine": "^11.0.0",
+    "@angular/forms": "~12.2.15",
+    "@angular/platform-browser": "~12.2.15",
+    "@angular/platform-browser-dynamic": "~12.2.15",
+    "@angular/platform-server": "~12.2.15",
+    "@angular/router": "~12.2.15",
+    "@nguniversal/express-engine": "^13.1.1",
     "express": "^4.15.2",
     "firebase": "8.1.1",
     "rxjs": "~6.5.4",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.3"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "<0.900 || ^0.900.0-0 || ^9.0.0-0",
-    "@angular-devkit/build-angular": "~0.1100.2",
-    "@angular/cli": "~11.0.2",
-    "@angular/compiler-cli": "~11.0.2",
-    "@angular/language-service": "~11.0.2",
-    "@nguniversal/builders": "^12.0.0",
+    "@angular-devkit/architect": "0.1202.14",
+    "@angular-devkit/build-angular": "~12.2.14",
+    "@angular/cli": "~12.2.14",
+    "@angular/compiler-cli": "~12.2.15",
+    "@angular/language-service": "~12.2.15",
+    "@nguniversal/builders": "^13.1.2",
     "@types/express": "^4.17.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
@@ -51,15 +51,15 @@
     "inquirer-autocomplete-prompt": "^1.0.1",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.1.1",
+    "karma": "~6.3.9",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "ng-packagr": "^11.0.3",
+    "ng-packagr": "^12.2.6",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.5"
+    "typescript": "~4.3.5"
   }
 }
