Upgrade to Angular 17
Angular 17 provides inbuild ssr support and hydration which is helpful to test the library in these scenarios.

--- a/package.json
+++ b/package.json
@@ -7,59 +7,47 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e",
-    "dev:ssr": "ng run ngx-flamegraph-sample:serve-ssr",
-    "serve:ssr": "node dist/ngx-flamegraph-sample/server/main.js",
-    "build:ssr": "ng build --configuration production && ng run ngx-flamegraph-sample:server:production",
-    "prerender": "ng run ngx-flamegraph-sample:prerender"
+    "serve:ssr": "node dist/ngx-flamegraph-sample/server/server.mjs"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^15.2.8",
-    "@angular/common": "^15.2.8",
-    "@angular/compiler": "^15.2.8",
-    "@angular/core": "^15.2.8",
+    "@angular/animations": "^17.3.12",
+    "@angular/common": "^17.3.12",
+    "@angular/compiler": "^17.3.12",
+    "@angular/core": "^17.3.12",
     "@angular/fire": "^7.5.0",
-    "@angular/forms": "^15.2.8",
-    "@angular/platform-browser": "^15.2.8",
-    "@angular/platform-browser-dynamic": "^15.2.8",
-    "@angular/platform-server": "^15.2.8",
-    "@angular/router": "^15.2.8",
-    "@nguniversal/express-engine": "^15.2.1",
-    "express": "^4.15.2",
+    "@angular/forms": "^17.3.12",
+    "@angular/platform-browser": "^17.3.12",
+    "@angular/platform-browser-dynamic": "^17.3.12",
+    "@angular/platform-server": "^17.3.12",
+    "@angular/router": "^17.3.12",
+    "@angular/ssr": "^17.3.11",
+    "express": "^4.18.2",
     "firebase": "8.1.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.14.10"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "0.1502.7",
-    "@angular-devkit/build-angular": "^15.2.7",
-    "@angular/cli": "^15.2.7",
-    "@angular/compiler-cli": "^15.2.8",
-    "@angular/language-service": "^15.2.8",
-    "@nguniversal/builders": "^15.2.1",
-    "@types/express": "^4.17.0",
-    "@types/jasmine": "~3.6.0",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
-    "@types/resize-observer-browser": "^0.1.7",
-    "codelyzer": "^6.0.0",
+    "@angular-devkit/build-angular": "^17.3.11",
+    "@angular/cli": "^17.3.11",
+    "@angular/compiler-cli": "^17.3.12",
+    "@angular/language-service": "^17.3.12",
+    "@types/express": "^4.17.17",
+    "@types/jasmine": "~5.1.0",
+    "@types/node": "^18.18.0",
     "firebase-tools": "^11.29.1",
     "fuzzy": "^0.1.3",
     "inquirer": "^6.2.2",
     "inquirer-autocomplete-prompt": "^1.0.1",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.3.9",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "ng-packagr": "^15.2.2",
-    "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
+    "jasmine-core": "~5.1.0",
+    "karma": "~6.4.0",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "^2.1.0",
+    "ng-packagr": "^17.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.8.4"
+    "typescript": "~5.4.5"
   }
 }
