--- a/angular.json
+++ b/angular.json
@@ -11,12 +11,12 @@
       "prefix": "app",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-angular:browser",
+          "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/ngx-flamegraph-sample/browser",
+            "outputPath": "dist/ngx-flamegraph-sample",
             "index": "src/index.html",
-            "main": "src/main.ts",
-            "polyfills": "src/polyfills.ts",
+            "browser": "src/main.ts",
+            "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
@@ -26,12 +26,11 @@
               "src/styles.css"
             ],
             "scripts": [],
-            "vendorChunk": true,
-            "extractLicenses": false,
-            "buildOptimizer": false,
-            "sourceMap": true,
-            "optimization": false,
-            "namedChunks": true
+            "server": "src/main.server.ts",
+            "prerender": true,
+            "ssr": {
+              "entry": "server.ts"
+            }
           },
           "configurations": {
             "production": {
@@ -41,13 +40,6 @@
                   "with": "src/environments/environment.prod.ts"
                 }
               ],
-              "optimization": true,
-              "outputHashing": "all",
-              "sourceMap": false,
-              "namedChunks": false,
-              "extractLicenses": true,
-              "vendorChunk": false,
-              "buildOptimizer": true,
               "budgets": [
                 {
                   "type": "initial",
@@ -59,35 +51,41 @@
                   "maximumWarning": "6kb",
                   "maximumError": "10kb"
                 }
-              ]
+              ],
+              "outputHashing": "all"
+            },
+            "development": {
+              "optimization": false,
+              "extractLicenses": false,
+              "sourceMap": true
             }
           },
-          "defaultConfiguration": ""
+          "defaultConfiguration": "production"
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
-          "options": {
-            "browserTarget": "ngx-flamegraph-sample:build"
-          },
           "configurations": {
             "production": {
-              "browserTarget": "ngx-flamegraph-sample:build:production"
+              "buildTarget": "ngx-flamegraph-sample:build:production"
+            },
+            "development": {
+              "buildTarget": "ngx-flamegraph-sample:build:development"
             }
-          }
+          },
+          "defaultConfiguration": "development"
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "ngx-flamegraph-sample:build"
+            "buildTarget": "ngx-flamegraph-sample:build"
           }
         },
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
             "main": "src/test.ts",
-            "polyfills": "src/polyfills.ts",
+            "polyfills": ["zone.js", "zone.js/testing"],
             "tsConfig": "tsconfig.spec.json",
-            "karmaConfig": "karma.conf.js",
             "assets": [
               "src/favicon.ico",
               "src/assets"
@@ -111,72 +109,10 @@
             ]
           }
         },
-        "e2e": {
-          "builder": "@angular-devkit/build-angular:protractor",
-          "options": {
-            "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "ngx-flamegraph-sample:serve"
-          },
-          "configurations": {
-            "production": {
-              "devServerTarget": "ngx-flamegraph-sample:serve:production"
-            }
-          }
-        },
         "deploy": {
           "builder": "@angular/fire:deploy",
           "options": {
-            "buildTarget": "ngx-flamegraph-sample:prerender:production"
-          }
-        },
-        "server": {
-          "builder": "@angular-devkit/build-angular:server",
-          "options": {
-            "outputPath": "dist/ngx-flamegraph-sample/server",
-            "main": "server.ts",
-            "tsConfig": "tsconfig.server.json",
-            "sourceMap": true,
-            "optimization": false
-          },
-          "configurations": {
-            "production": {
-              "outputHashing": "media",
-              "fileReplacements": [
-                {
-                  "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.prod.ts"
-                }
-              ],
-              "sourceMap": false,
-              "optimization": true
-            }
-          },
-          "defaultConfiguration": ""
-        },
-        "serve-ssr": {
-          "builder": "@nguniversal/builders:ssr-dev-server",
-          "options": {
-            "browserTarget": "ngx-flamegraph-sample:build",
-            "serverTarget": "ngx-flamegraph-sample:server"
-          },
-          "configurations": {
-            "production": {
-              "browserTarget": "ngx-flamegraph-sample:build:production",
-              "serverTarget": "ngx-flamegraph-sample:server:production"
-            }
-          }
-        },
-        "prerender": {
-          "builder": "@nguniversal/builders:prerender",
-          "options": {
-            "browserTarget": "ngx-flamegraph-sample:build:production",
-            "serverTarget": "ngx-flamegraph-sample:server:production",
-            "routes": [
-              "/"
-            ]
-          },
-          "configurations": {
-            "production": {}
+            "buildTarget": "ngx-flamegraph-sample:build:production"
           }
         }
       }
@@ -190,21 +126,23 @@
         "build": {
           "builder": "@angular-devkit/build-angular:ng-packagr",
           "options": {
-            "tsConfig": "projects/ngx-flamegraph/tsconfig.lib.json",
             "project": "projects/ngx-flamegraph/ng-package.json"
           },
           "configurations": {
             "production": {
               "tsConfig": "projects/ngx-flamegraph/tsconfig.lib.prod.json"
+            },
+            "development": {
+              "tsConfig": "projects/ngx-flamegraph/tsconfig.lib.json"
             }
-          }
+          },
+          "defaultConfiguration": "production"
         },
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "main": "projects/ngx-flamegraph/src/test.ts",
             "tsConfig": "projects/ngx-flamegraph/tsconfig.spec.json",
-            "karmaConfig": "projects/ngx-flamegraph/karma.conf.js"
+            "polyfills": ["zone.js", "zone.js/testing"]
           }
         },
         "lint": {
